--- a/index.html
+++ b/index.html
@@ -579,13 +579,13 @@
                                 class="text-xs font-semibold uppercase tracking-wider text-purple-400 bg-purple-900/30 px-3 py-1 rounded-full mb-3 inline-block border border-purple-400/50">
                                 UI/UX Focus
                             </span>
-                            <h3 class="text-3xl font-bold mb-4 text-white">Project: Student Job platform</h3>
+                            <h3 class="text-3xl font-bold mb-4 text-white">Project: Student Job Platform</h3>
                             <p class="text-gray-400 mb-6">
                                 <strong>Challenge:</strong> Design a fully responsive Job Platform for
                                 Studentss
                             </p>
                             <ul class="space-y-2 text-gray-300">
-                                <li><strong>Organization:</strong>School Project.</li>
+                                <li><strong>Organization:</strong>School Project</li>
                                 <li> <strong>UI/UX:</strong> Designed the complete user interface, user experience,
                                     wireframe and complete prototype and a responsive screen design.
                                 </li>
@@ -630,7 +630,7 @@
                                 Nobel prize in the science genre.
                             </p>
                             <ul class="space-y-2 text-gray-300">
-                                <li><strong>Organization:</strong>Company.</li>
+                                <li><strong>Organization:</strong>Company</li>
                                 <li> <strong>UI/UX:</strong> Co-designed the complete user interface, including creation
                                     of the project logo, wireframes, prototypes, and a fully responsive screen design.
                                 </li>
